--- a/style.css
+++ b/style.css
@@ -33,7 +33,15 @@ a {
 
 
 
+#renovations {
+    font-size: 26pt;
+    margin-top: -20px;
+    font-family: 'Arial Narrow';
+}
 
+#naam {
+    max-height: 100px;
+}
 
 .header_image img {
     max-width: 60%;
@@ -55,7 +63,7 @@ a {
 }
 
 .header img {
-    max-width: 10%;
+    max-width: 20%;
     max-height: 80%;
 }
 
@@ -66,11 +74,12 @@ a {
     align-content: center;
     margin-top: 4%;
     position: relative;
+    width: 100%;
 }
 
 .nav a {
     justify-content: space-around;
-    margin-right: 10px;
+    margin-right: 50px;
     font-size: larger;
     display: inline-block;
     position: relative;
@@ -133,14 +142,4 @@ a {
     padding-bottom: 300px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-#renovations {
-    font-size: 26pt;
-    margin-top: -20px;
-    font-family: 'Arial Narrow';
-}
-
-#naam {
-    max-height: 100px;
 }
